--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.kafka.bootstrap-servers=localhost:29092
+
+spring.datasource.url=jdbc:mysql://localhost:8888/preprod-eu-stock
+spring.datasource.username=root
+spring.datasource.password=password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+server.port=8082
